finalized visualizer and restructured lots of code most things use eventlisteners now instead of onclick (sorry philip :)) (onclick did not work correctly on mobile) fixed issues where the current song list would not update correctly the songlist can add a song to the player now fixed issue where song would be converted to title and then searched playlist.js now uses the proper songlistclass object the searchbar now stores the previous list and does not overwrite it there is a button to toggle the player focus now (clicking the songtitle also works apparently) fixed the crawler find function throwing an error when a tag was null overflow is now set to auto (this looks cooler and is more compatible) the playerlist has a cool slide animation :) removed most on click html attributes

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -17,6 +17,8 @@ Styling             - preset styling for certain elements
 /* ========== RESET ================= */
 
 body {
+    height: 100%;
+    width: 100%;
     margin: 0;
     background-color: #1e2025;
     background-color: var(--bg-primary);
@@ -86,6 +88,9 @@ button:focus {
 }
 .right {
     float: right;
+}
+.rotate {
+    transform: rotate(180deg);
 }
 /* ========== FONTS ================= */
 
