--- a/public/css/musicplayer.css
+++ b/public/css/musicplayer.css
@@ -40,8 +40,13 @@ Styling            - individual content styling
     min-height: 100px;
     background-color: var(--bg-secondary);
     z-index: 1000;
+    height: 100px;
+    transition: height 0.5s ease;
 }
 
+.songlist-active {
+    height: 100% !important;
+}
 /* ********** song info ************* */
 #player .song-info {
     width: 160px;
@@ -157,15 +162,15 @@ Styling            - individual content styling
     position: relative;
     width: 50%;
 }
-#control button svg .stroke {
+#player button svg .stroke {
     fill: none;
     stroke: var(--text);
-    stroke-width: 25;
+    stroke-width: 30;
     stroke-linecap: round;
     stroke-miterlimit: 10;
     transition: stroke 0.5s ease;
 }
-#control button svg .fill {
+#player button svg .fill {
     fill: var(--text);
     transition: fill 0.5s ease;
 }
@@ -208,16 +213,44 @@ Styling            - individual content styling
 }
 /* ========== CURRENT SONGLIST ====== */
 
-#player-playlist {
-    height: 0;
+#expand-player-list {
+    height: 20px;
     width: 100%;
+    margin: 0 auto;
+    cursor: pointer;
+    transition: transform 0.5s ease;
+}
+#expand-player-list polyline {
+    fill: none;
+    stroke: var(--text);
+    stroke-width: 30;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke-miterlimit: 10;
+}
+
+#player-playlist {
+    display: none;
+    width: 100%;
+    height: calc(100% - 100px);
+    overflow: scroll;
     transition: height 0.5s ease;
 }
 
 #visualizer {
     height: 200px;
-    width: 200px;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
 }
+
 #player-playlist tbody tr:first-child {
     color: var(--contrast);
+}
+@media only screen and (max-width: 900px) {
+    #player-playlist {
+        height: calc(100% - 200px);
+    }
 }
